SFUSA/force-app/main/default/objects/StoredCredentials__c/fields/Password__c.field-meta.xml
<CustomField>
        <fullName>Password__c</fullName>
        <description>Password for the authentication</description>
        <label>Password</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>